# vos

./: .gitignore  AGENTS.md  BASH_CHEATSHEET.md  HUONG_DAN.md  README.md
.opencode/: config.json
app/: README.txt  install.bat  main.py  modbus_server.py  requirements.txt  run.bat  test_env.py
app/cpp-qt5/: CMakeLists.txt  build.bat  main.cpp
